--- a/index.html
+++ b/index.html
@@ -261,7 +261,12 @@
 
   </main>
   <footer class="bg-dark">
-    <p class="mb-0 foot-para fs-4 pb-4">JAY.</p>
+    <div class="container foot-icon">
+      <a href="https://github.com/jayKanojiya1" target="_blank"><i class="fa-brands fa-github github me-3"></i></a>
+      <a href="https://www.linkedin.com/in/jay-kanojiya-818009212/" target="_blank"><i class="fa-brands fa-linkedin linkedin"></i></a>
+       <p class="mb-0 foot-para fs-4 pb-4">JAY.</p>
+    </div>
+   
   </footer>
 
 
