--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
               <span class="date">2019-2022</span>
               <h2 class="text-white my-3">Bachelor of Science in IT</h2>
               <span class="position">Mumbai University</span>
-              <p class="grey mt-2">A small river named Duden flows by their place and supplies it with the necessary
+              <!-- <p class="grey mt-2">A small river named Duden flows by their place and supplies it with the necessary
                 regelialia. It is a
-                paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+                paradisematic country, in which roasted parts of sentences fly into your mouth.</p> -->
             </div>
 
           </div>
@@ -129,9 +129,9 @@
               <span class="date">2017-2019</span>
               <h2 class="text-white my-3">HSC Science</h2>
               <span class="position">Maharashtra State Board</span>
-              <p class="grey mt-2">A small river named Duden flows by their place and supplies it with the necessary
+              <!-- <p class="grey mt-2">A small river named Duden flows by their place and supplies it with the necessary
                 regelialia. It is a
-                paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+                paradisematic country, in which roasted parts of sentences fly into your mouth.</p> -->
             </div>
 
           </div>
