--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
 
     <!-- Professional Experience -->
 
-
-    <section class="bg-dark py-5">
+     <section class="bg-dark py-5">
       <div class="container">
         <h2 class="text-center about-me text-white">Professional Experience</h2>
         <div class="row py-5">
@@ -254,7 +253,32 @@
       </div>
 
     </section>
+      <!-- contact me -->
 
+      <section class="bg-dark pb-5">
+        <div class="container">
+          <h2 class="text-center about-me text-white pb-4">Contact Me</h2>
+          <div class="row py-4">
+            <div class="col-md-4 text-center">
+              <i class="fa-solid fa-location-dot text-white pb-3 fs-3"></i>
+              <h5 class="text-white py-3">ADDRESS</h5>
+              <p class="text-white">IIT Market, Powai, Mumbai - 400076</p>
+
+            </div>
+            <div class="col-md-4 text-center">
+              <i class="fa-solid fa-phone text-white pb-3 fs-3"></i>
+              <h5 class="text-white py-3">CONTACT NUMBER</h5>
+              <p class="text-white">91+ 7039167811</p>
+            </div>
+            <div class="col-md-4 text-center">
+              <i class="fa-solid fa-envelope text-white pb-3 fs-3"></i>
+              <h5 class="text-white py-3">EMAIL ADDRESS</h5>
+              <p class="text-white">jaykanojiya1010@gmail.com</p>
+
+            </div>
+          </div>
+        </div>
+      </section>
 
 
 
