--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <section class="about-section bg-dark">
       <div class="container">
-        <h2 class="text-center about-me text-white mb-4">About Me</h2>
+        <h2 class="text-center about-me text-white mb-5">About Me</h2>
 
         <div class="col-md-12">
           <div class="education-wrap">
@@ -108,7 +108,7 @@
     </section>
 
     <!-- Education -->
-    <section class="bg-dark">
+    <section class="bg-dark pt-4">
       <div class="container">
         <h2 class="text-center about-me text-white">Education</h2>
         <div class="row py-5">
@@ -257,21 +257,21 @@
 
       <section class="bg-dark pb-5">
         <div class="container">
-          <h2 class="text-center about-me text-white pb-4">Contact Me</h2>
+          <h2 class="text-center about-me text-white pb-5">Contact Me</h2>
           <div class="row py-4">
             <div class="col-md-4 text-center">
-              <i class="fa-solid fa-location-dot text-white pb-3 fs-3"></i>
+              <i class="fa-solid fa-location-dot text-white pb-4 fs-3 icon-color"></i>
               <h5 class="text-white py-3">ADDRESS</h5>
               <p class="text-white">IIT Market, Powai, Mumbai - 400076</p>
 
             </div>
             <div class="col-md-4 text-center">
-              <i class="fa-solid fa-phone text-white pb-3 fs-3"></i>
+              <i class="fa-solid fa-phone text-white pb-4 fs-3 icon-color"></i>
               <h5 class="text-white py-3">CONTACT NUMBER</h5>
               <p class="text-white">91+ 7039167811</p>
             </div>
             <div class="col-md-4 text-center">
-              <i class="fa-solid fa-envelope text-white pb-3 fs-3"></i>
+              <i class="fa-solid fa-envelope text-white pb-4 fs-3 icon-color"></i>
               <h5 class="text-white py-3">EMAIL ADDRESS</h5>
               <p class="text-white">jaykanojiya1010@gmail.com</p>
 
@@ -284,7 +284,7 @@
 
 
   </main>
-  <footer class="bg-dark">
+  <footer class="bg-dark pt-5">
     <div class="container foot-icon">
       <a href="https://github.com/jayKanojiya1" target="_blank"><i class="fa-brands fa-github github me-3"></i></a>
       <a href="https://www.linkedin.com/in/jay-kanojiya-818009212/" target="_blank"><i class="fa-brands fa-linkedin linkedin"></i></a>
